--- a/portofolio.html
+++ b/portofolio.html
@@ -15,10 +15,10 @@
             </main>
             <div class="content">
                 <aside>
-                    <a href="https://rakhafawwaz.github.io/fawwaz/">Link</a>
+                    <a href="https://rakhafawwaz.github.io/bama/">Link</a>
                 </aside>
                 <nav>
-                    <a href="https://rakhafawwaz.github.io/fawwaz/">Link</a>
+                    <a href="https://rakhafawwaz.github.io/xtream/">Link</a>
                 </nav>
             </div>
         </div>
