--- a/Latarbelakang.html
+++ b/Latarbelakang.html
@@ -64,6 +64,7 @@ footer
         <p>Adobe Photoshop</p>
         <p>Adobe Illustrator</p>
         <p>Adobe XD</p>
+        <p>Figma.com</p>
     </div>
 </div>
 <footer>
